--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -7,6 +7,22 @@ body {
     padding: 0;
 }
 
+#cabecera {
+    background: #33a;
+    box-shadow: 3px 3px 7px 0px rgb(0 0 0 / 50%);
+    color: white;
+    margin: 0;
+    font-weight: bold;
+    padding: 0.5em ;
+    font-size: 20px;
+}
+
+#cabecera #tagline {
+    font-weight: bold;
+    font-size: 0.8em;
+    padding-left: 10px;
+}
+
 #container {
     width: 70%;
     padding: 1em;
