--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -1,5 +1,6 @@
 body {
     color: #333;
+    background: #1e1f24;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
@@ -8,13 +9,19 @@ body {
 }
 
 #cabecera {
-    background: #33a;
+    background: #33a ;
     box-shadow: 3px 3px 7px 0px rgb(0 0 0 / 50%);
     color: white;
     margin: 0;
     font-weight: bold;
-    padding: 0.5em ;
+    padding: 0.5em 0 0.5em 1em ;
     font-size: 20px;
+}
+
+#cabecera #logo {
+    width: 34px;
+    vertical-align: middle;
+    padding-right: 10px;
 }
 
 #cabecera #tagline {
@@ -25,7 +32,6 @@ body {
 
 #container {
     width: 70%;
-    padding: 1em;
     text-align: left;
     border: 1px solid #ddd;
     margin: 0 auto;
@@ -33,4 +39,9 @@ body {
 
 #container h1 {
     font-size: 20px;
+}
+
+#post {
+    background: white;
+    padding: 3px;
 }
